EC-137 solved some bugs regarding async analysis and added analysis 4 async