@@ -3,16 +3,13 @@ package it.unical.demacs.asd.energycommunities;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import it.unical.demacs.asd.energycommunities.data.dao.OngoingAnalysisDao;
-import it.unical.demacs.asd.energycommunities.data.entities.Member;
 import it.unical.demacs.asd.energycommunities.data.entities.OngoingAnalysis;
 import it.unical.demacs.asd.energycommunities.data.entities.User;
 import it.unical.demacs.asd.energycommunities.data.services.implementation.OngoingAnalysisServiceImpl;
 import it.unical.demacs.asd.energycommunities.dto.analysis.result.OngoingAnalysisDto;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -25,7 +22,6 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.modelmapper.ModelMapper;
-
 
 @ExtendWith(MockitoExtension.class)
 public class OngoingAnalysisTest {
@@ -44,6 +40,7 @@ public class OngoingAnalysisTest {
     private OngoingAnalysis mockOngoingAnalysis;
     private OngoingAnalysisDto mockOngoingAnalysisDto;
     private User mockUser;
+
     private final Long testUserId = 1L;
     private final Long testAnalysisId = 100L;
 
@@ -54,10 +51,6 @@ public class OngoingAnalysisTest {
         mockUser.setUsername("user");
         mockUser.setEmail("adsfa@gmail.com");
 
-        Member mockMember = new Member();
-        mockMember.setId(50L);
-        mockMember.setFullName("Member 1");
-
         mockOngoingAnalysis = new OngoingAnalysis();
         mockOngoingAnalysis.setId(testAnalysisId);
         mockOngoingAnalysis.setUser(mockUser);
@@ -65,10 +58,7 @@ public class OngoingAnalysisTest {
         mockOngoingAnalysis.setStatus("RUNNING");
         mockOngoingAnalysis.setCreatedAt(LocalDateTime.now());
         mockOngoingAnalysis.setResultModel(mapper.readTree("\"niente niente\""));
-
-        List<Member> members = new ArrayList<>();
-        members.add(mockMember);
-        mockOngoingAnalysis.setMembers(members);
+        mockOngoingAnalysis.setMemberIds(List.of(50L));
 
         mockOngoingAnalysisDto = new OngoingAnalysisDto();
         mockOngoingAnalysisDto.setId(testAnalysisId);
@@ -80,10 +70,7 @@ public class OngoingAnalysisTest {
 
     @Test
     void testFindByUserId() {
-        List<OngoingAnalysis> analysisList = new ArrayList<>();
-        analysisList.add(mockOngoingAnalysis);
-
-        when(ongoingAnalysisDao.findByUserId(testUserId)).thenReturn(analysisList);
+        when(ongoingAnalysisDao.findByUserId(testUserId)).thenReturn(List.of(mockOngoingAnalysis));
         when(modelMapper.map(mockOngoingAnalysis, OngoingAnalysisDto.class)).thenReturn(mockOngoingAnalysisDto);
 
         List<OngoingAnalysisDto> result = ongoingAnalysisService.findByUserId(testUserId);
@@ -117,8 +104,7 @@ public class OngoingAnalysisTest {
         assertEquals(testAnalysisId, result.getId());
         assertEquals("RUNNING", result.getStatus());
         assertEquals(1, result.getAnalysisType());
-        assertNotNull(result.getMembers());
-        assertEquals(1, result.getMembers().size());
+        assertEquals(1, result.getMemberIds().size());
         verify(ongoingAnalysisDao).save(mockOngoingAnalysis);
     }
 
@@ -133,6 +119,7 @@ public class OngoingAnalysisTest {
         assertEquals(mockUser, result.getUser());
         assertEquals("RUNNING", result.getStatus());
         assertEquals("niente niente", result.getResultModel().asText());
+        assertEquals(List.of(50L), result.getMemberIds());
         verify(ongoingAnalysisDao).findById(testAnalysisId);
     }
 
@@ -149,20 +136,19 @@ public class OngoingAnalysisTest {
     @Test
     void testDeleteById() {
         ongoingAnalysisService.deleteById(testAnalysisId);
-
         verify(ongoingAnalysisDao).deleteById(testAnalysisId);
     }
 
     @Test
     void testFindByUserIdMultipleAnalyses() throws JsonProcessingException {
-        OngoingAnalysis secondAnalysis = new OngoingAnalysis();
-        secondAnalysis.setId(200L);
-        secondAnalysis.setUser(mockUser);
-        secondAnalysis.setAnalysisType(2);
-        secondAnalysis.setStatus("FINISHED");
-        secondAnalysis.setCreatedAt(LocalDateTime.now().minusHours(1));
-        secondAnalysis.setMembers(new ArrayList<>());
-        secondAnalysis.setResultModel(mapper.readTree("\"completed model\""));
+        OngoingAnalysis second = new OngoingAnalysis();
+        second.setId(200L);
+        second.setUser(mockUser);
+        second.setAnalysisType(2);
+        second.setStatus("FINISHED");
+        second.setCreatedAt(LocalDateTime.now().minusHours(1));
+        second.setMemberIds(new ArrayList<>());
+        second.setResultModel(mapper.readTree("\"completed model\""));
 
         OngoingAnalysisDto secondDto = new OngoingAnalysisDto();
         secondDto.setId(200L);
@@ -170,41 +156,35 @@ public class OngoingAnalysisTest {
         secondDto.setAnalysisType(2);
         secondDto.setStatus("FINISHED");
 
-        List<OngoingAnalysis> analysisList = new ArrayList<>();
-        analysisList.add(mockOngoingAnalysis);
-        analysisList.add(secondAnalysis);
+        List<OngoingAnalysis> list = List.of(mockOngoingAnalysis, second);
 
-        when(ongoingAnalysisDao.findByUserId(testUserId)).thenReturn(analysisList);
+        when(ongoingAnalysisDao.findByUserId(testUserId)).thenReturn(list);
         when(modelMapper.map(mockOngoingAnalysis, OngoingAnalysisDto.class)).thenReturn(mockOngoingAnalysisDto);
-        when(modelMapper.map(secondAnalysis, OngoingAnalysisDto.class)).thenReturn(secondDto);
+        when(modelMapper.map(second, OngoingAnalysisDto.class)).thenReturn(secondDto);
 
         List<OngoingAnalysisDto> result = ongoingAnalysisService.findByUserId(testUserId);
 
         assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals("RUNNING", result.getFirst().getStatus());
+        assertEquals("RUNNING", result.get(0).getStatus());
         assertEquals("FINISHED", result.get(1).getStatus());
-        assertEquals(1, result.getFirst().getAnalysisType());
+        assertEquals(1, result.get(0).getAnalysisType());
         assertEquals(2, result.get(1).getAnalysisType());
         verify(ongoingAnalysisDao).findByUserId(testUserId);
     }
 
     @Test
-    void testFindByIdWithMultipleMembers() {
-        Member secondMember = new Member();
-        secondMember.setId(51L);
-        secondMember.setFullName("Member 2");
-
-        mockOngoingAnalysis.getMembers().add(secondMember);
+    void testFindByIdWithMultipleMemberIds() {
+        mockOngoingAnalysis.setMemberIds(List.of(50L, 51L));
 
         when(ongoingAnalysisDao.findById(testAnalysisId)).thenReturn(Optional.ofNullable(mockOngoingAnalysis));
 
         OngoingAnalysis result = ongoingAnalysisService.findById(testAnalysisId);
 
         assertNotNull(result);
-        assertEquals(2, result.getMembers().size());
-        assertEquals("Member 1", result.getMembers().getFirst().getFullName());
-        assertEquals("Member 2", result.getMembers().get(1).getFullName());
+        assertEquals(2, result.getMemberIds().size());
+        assertEquals(50L, result.getMemberIds().get(0));
+        assertEquals(51L, result.getMemberIds().get(1));
         verify(ongoingAnalysisDao).findById(testAnalysisId);
     }
 }
